--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,4 +1,18 @@
 <div class="wrapper" >
+
+
+    <div class="test-cotainer">
+        <div class="info-container">
+            <h3>For Testing Purpose Use This Credentials</h3>
+            <h4>User Credentials</h4>
+            <p class="note">email : test&commat;gmail.com</p>
+            <p class="note">password: test123</p>
+        <br>
+        <p>for ADMIN CREDENTIAL contact me at tanishchauhanofficial&commat;gmail.com</p>
+
+        <p class="note">Note: please upload appropriate post</p>
+        </div> 
+    </div>
     <div class="login-container">
 
         <h1 class="title">Login</h1>
