--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer>
     <div class="global-wrappe">
         <div class="copyright">
-            <h2>Copyright 2024. All Rights Reserved </h2>
+            <h2>&#169; 2024  All Rights Reserved </h2>
+            <p>Contact me at <span>tanishchauhanofficial&commat;gmail.com</span></p>
         </div>
     </div>
 </footer>
