--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -11,7 +11,7 @@
                 <!-- <li><a href="#" class="nav-link">MostViewed</a></li> -->
                 
                 @if(isLoggedIn){
-                    <li><a routerLink="/post" class="nav-link">Post</a></li>
+                    <li><a routerLink="/post" class="nav-link">Dashboard</a></li>
                     <li><a  class="btn" (click)="logout()">Log Out</a></li>
                 }
                 @else {
@@ -26,33 +26,41 @@
             }
         </div>
         <div class="open-container " [ngClass] = "{'active': !openSidebar}" (click) = "toggleSidebar()">
-            <button class="btn">open</button>
+            <span class="btn">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 78.3 14.3 64 32 64l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 128C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32l384 0c17.7 0 32 14.3 32 32s-14.3 32-32 32L32 288c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32L32 448c-17.7 0-32-14.3-32-32s14.3-32 32-32l384 0c17.7 0 32 14.3 32 32z"/></svg>
+            </span>
         </div>
+
+
+
         <div class="sidebar" [ngClass] = "{'open': openSidebar}">
             <div class="sidebar-container">
         
         
-                <div class="close-container" (click) = "toggleSidebar()">
-                    <button class="btn">Close</button>
-                </div>
-                @if(isLoggedIn){
-                    <div>
-                      Hi  {{ userData?.username}}
+                <div class="close-container " [ngClass] = "{'show-user': isLoggedIn}">
+                    @if(isLoggedIn){
+                        <div class="sidebar-user">
+                          Hi  {{ userData?.username}}
+                        </div>
+                    }
+                    <div class="btn close-btn" (click) = "toggleSidebar()">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/></svg>
                     </div>
-                }
+                </div>
+                
                 <ul class="link-container">
-                    <li><a routerLink="/" class=" side-link">Home</a></li>
-                    <li><a routerLink="/popular" class=" side-link">Popular</a></li>
-                    <li><a routerLink="/all-blogs" class=" side-link">Search</a></li>
+                    <li><a routerLink="/" class=" side-link" (click) = "toggleSidebar()" >Home</a></li>
+                    <li><a routerLink="/popular" class=" side-link" (click) = "toggleSidebar()">Popular</a></li>
+                    <li><a routerLink="/all-blogs" class=" side-link" (click) = "toggleSidebar()">Search</a></li>
                     <!-- <li><a href="#" class="nav-link">MostViewed</a></li> -->
                     
                     @if(isLoggedIn){
-                        <li><a routerLink="/post" class=" side-link">Post</a></li>
-                        <li><a  class=" side-link" (click)="logout()">Log Out</a></li>
+                        <li><a routerLink="/post" class=" side-link" (click) = "toggleSidebar()">Dashboard</a></li>
+                        <li><a  class=" side-link" (click)="logout()" >Log Out</a></li>
                     }
                     @else {
-                        <li><a routerLink="/signup" class=" side-link">Sign Up</a></li>
-                        <li><a routerLink="/login" class=" side-link">Log In</a></li>
+                        <li><a routerLink="/signup" class=" side-link" (click) = "toggleSidebar()">Sign Up</a></li>
+                        <li><a routerLink="/login" class=" side-link" (click) = "toggleSidebar()">Log In</a></li>
                     }
                 </ul>
                 
