--- a/src/app/pages/blogs/blogs.component.css
+++ b/src/app/pages/blogs/blogs.component.css
@@ -6,6 +6,12 @@
     justify-content: center;
     align-items: center;
 }
+svg{
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+ 
+}
 input[type = "text"]{
     padding: 16px;
     width: 100%;
