--- a/src/app/pages/my-post/my-post.component.css
+++ b/src/app/pages/my-post/my-post.component.css
@@ -11,6 +11,19 @@
 .title{
     text-align: center;
 }
+svg{
+        width: 18px;
+        height: 18px;
+        cursor: pointer;
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+}
+.btn-group{
+    display: flex;
+    justify-content: center;
+    gap:8px;
+}
 .post-img{
     max-width: 70px;
     max-height:70px ;
