--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -132,10 +132,14 @@ ul li{
     }
     
     .open-container{
-        display: block;
+        display: flex;
+        justify-content: flex-end;
     }
 
 
+    .open.btn{
+        padding: 0px !important;
+    }
     .sidebar{
         width: 250px;
         display:block;
@@ -187,7 +191,14 @@ ul li{
         gap:16px;
     }
     
-
+    svg{
+        width: 18px;
+        height: 18px;
+        cursor: pointer;
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+}
 
 }
 
